src/test/ui/hygiene/no_implicit_prelude-2018.stderr
error: cannot find macro `print!` in this scope
  --> $DIR/no_implicit_prelude-2018.rs:7:9
   |
LL |         print!(); //~ ERROR cannot find macro `print!` in this scope
   |         ^^^^^
   |
   = help: have you added the `#[macro_use]` on the module/import?

error: aborting due to previous error

